# ref-verify

./: .gitignore  AGENT_USAGE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.ko.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: false_positive.md  feature_request.md  missed_hallucination.md
.github/workflows/: ci.yml  live-smoke.yml  publish-pypi.yml
docs/superpowers/plans/: 2026-06-08-batch-claim-workflow.md  2026-06-08-numeric-claim-verifier.md
docs/superpowers/specs/: 2026-06-08-abstract-source-fallback-and-error-verdicts-design.md  2026-06-08-batch-claim-workflow-design.md  2026-06-08-numeric-claim-verifier-design.md
evals/: cli_regression.jsonl  cli_regression.md  run_cli_regression.py
src/ref_verify/: __init__.py  abstract_lookup.py  batch.py  claim_check.py  cli.py  crossref.py  doi_check.py  models.py  numeric_claim.py  pubmed.py  semantic_scholar.py
tests/: test_abstract_sources.py  test_batch.py  test_claim_check.py  test_cli.py  test_crossref.py  test_doi_check.py  test_numeric_claim.py  test_skill_docs.py
